fixed alignment problem with feedback button

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -553,7 +553,7 @@ main {
     display: inline-block;
     position: fixed;
     top: 300px;
-    margin-right:-2.5%;
+    margin-right:-2.1%;
     right:0;
     transform: rotate(270deg);
     background-color: lightblue;
